TestCases/ASTTests/SemanticErrorsTests/tests/test22.c
int main() {
    float f;
    **f = 5;
        return 0;

}